syntax = "proto3";

option java_package = "com.learn.grpc.stubs";
option java_multiple_files = true;

service ProductService {
  rpc getProductDetails(ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  string product_name = 2;
}

message ProductResponse {
  repeated Product product = 1;
}

message Product {
  int32 id = 1;
  string product_name = 2;
  int32 quantity = 3;
}